# platform.upstream.gst-plugins-base

./: .gbs.conf  .gitignore  Makefile.am  Makefile.in  RELEASE  configure  configure.ac  gst-plugins-base.lang  gst-plugins-base.spec.in
common/: Makefile.in
common/m4/: Makefile.in
debian/: changelog  control  gstreamer0.10-alsa.install  gstreamer0.10-plugins-base-apps.install  gstreamer0.10-plugins-base.install  gstreamer0.10-x.install  libgstreamer-plugins-base0.10-0.install  libgstreamer-plugins-base0.10-dev.install  libgstreamer-plugins-base0.10-sdk-dev.install  rules
docs/: Makefile.in  version.entities
docs/design/: Makefile.in
docs/libs/: Makefile.in
docs/plugins/: Makefile.in
ext/: Makefile.in
ext/alsa/: Makefile.in
ext/cdparanoia/: Makefile.in
ext/gio/: Makefile.in
ext/gnomevfs/: Makefile.in
ext/libvisual/: Makefile.in
ext/ogg/: Makefile.in
ext/pango/: Makefile.in  gsttextrender.c  gsttextrender.h
ext/theora/: Makefile.in  gsttheoraenc.c
ext/vorbis/: Makefile.in
gst/: Makefile.in
gst-libs/: Makefile.in
gst-libs/gst/: Makefile.am  Makefile.in
gst-libs/gst/app/: Makefile.am  Makefile.in
gst-libs/gst/audio/: Makefile.am  Makefile.in  gstaudiodecoder.c
gst-libs/gst/cdda/: Makefile.in
gst-libs/gst/fft/: Makefile.in
gst-libs/gst/floatcast/: Makefile.in
gst-libs/gst/interfaces/: Makefile.am  Makefile.in  cameracontrol.c  cameracontrol.h  cameracontrolchannel.c  cameracontrolchannel.h
gst-libs/gst/netbuffer/: Makefile.in
gst-libs/gst/pbutils/: Makefile.am  Makefile.in
gst-libs/gst/policy/: Makefile.am  gstpolicy.c  gstpolicy.h
gst-libs/gst/riff/: Makefile.am  Makefile.in  riff-ids.h  riff-media.c
gst-libs/gst/rtp/: Makefile.am  Makefile.in
gst-libs/gst/rtsp/: Makefile.am  Makefile.in  gstrtspconnection.c
gst-libs/gst/sdp/: Makefile.in
gst-libs/gst/tag/: Makefile.am  Makefile.in
gst-libs/gst/video/: Makefile.am  Makefile.in  cameracontrol.c  cameracontrol.h  cameracontrolchannel.c  cameracontrolchannel.h  gstvideodecoder.c  video-converter.c  video-format.c  video-format.h  video-info.c  videooverlay.c  videooverlay.h
gst/adder/: Makefile.in
gst/app/: Makefile.in
gst/audioconvert/: Makefile.in
gst/audiorate/: Makefile.in
gst/audioresample/: Makefile.in
gst/audiotestsrc/: Makefile.in
gst/encoding/: Makefile.in
gst/ffmpegcolorspace/: Makefile.in  gstffmpegcodecmap.c  gstffmpegcolorspace.c
gst/gdp/: Makefile.in
gst/playback/: Makefile.am  Makefile.in  gstplay-marshal.c  gstplaybin2.c  gstplaysink.c  gstplaysinkvideoconvert.c
gst/policy/: Makefile.am  gstautopolicy.c  gstautopolicy.h  gstdefaultpolicy.c  gstdefaultpolicy.h  gstpolicyplugin.c  gstpolicyplugin.h
gst/subparse/: Makefile.in  gstsubparse.c  gstsubparse.h  samiparse.c  samiparse.h
gst/tcp/: Makefile.in
gst/typefind/: Makefile.in  gsttypefindfunctions.c
gst/videoconvert/: Makefile.am  gsttbmbufferpool.c  gsttbmbufferpool.h  gstvideoconvert.c  gstvideoconvert.h  videoconvert.c  videoconvert.h
gst/videorate/: Makefile.in
gst/videoscale/: Makefile.am  Makefile.in
gst/videotestsrc/: Makefile.in
gst/volume/: Makefile.in
gst/vspfilter/: Makefile.am  gstvspfilter.c  gstvspfilter.h
m4/: Makefile.in
mobile/: configure.ac
mobile/ext/ogg/: gstoggdemux.c
mobile/gst-libs/gst/interfaces/: cameracontrol.c  cameracontrol.h
mobile/gst-libs/gst/riff/: riff-media.c
mobile/gst-libs/gst/rtsp/: gstrtspconnection.c
mobile/gst/typefind/: gsttypefindfunctions.c
mobile/sys/xvimage/: Makefile.am  xv_types.h  xvimagesink.h
packaging/: backupgst-plugins-base.spec.try  baselibs.conf  common.tar.bz2  gst-plugins-base.changes  gst-plugins-base.spec  gst-plugins-base10.spec
pkgconfig/: Makefile.am  Makefile.in  gstreamer-allocators-1.0-uninstalled.pc  gstreamer-allocators.pc  gstreamer-app-1.0.pc  gstreamer-app-uninstalled.pc  gstreamer-audio-1.0-uninstalled.pc  gstreamer-audio-1.0.pc  gstreamer-fft-1.0-uninstalled.pc  gstreamer-fft.pc  gstreamer-pbutils-uninstalled.pc  gstreamer-pbutils.pc  gstreamer-plugins-base-1.0-uninstalled.pc  gstreamer-plugins-base.pc  gstreamer-policy-uninstalled.pc.in  gstreamer-policy.pc.in  gstreamer-riff-1.0-uninstalled.pc  gstreamer-riff.pc  gstreamer-rtp-uninstalled.pc  gstreamer-rtp.pc  gstreamer-rtsp-1.0-uninstalled.pc  gstreamer-rtsp.pc  gstreamer-sdp-uninstalled.pc  gstreamer-sdp.pc  gstreamer-tag-uninstalled.pc  gstreamer-tag.pc  gstreamer-video-1.0-uninstalled.pc  gstreamer-video.pc
sys/: Makefile.in
sys/v4l/: Makefile.in
sys/ximage/: Makefile.in
sys/xvimage/: Makefile.am  Makefile.in  xv_types.h  xvcontext.c  xvcontext.h  xvimageallocator.c  xvimageallocator.h  xvimagepool.c  xvimagesink.c  xvimagesink.h
tests/: Makefile.in
tests/check/: Makefile.am  Makefile.in
tests/check/elements/: policy.c
tests/examples/: Makefile.in
tests/examples/app/: Makefile.in
tests/examples/dynamic/: Makefile.in
tests/examples/encoding/: Makefile.in
tests/examples/gio/: Makefile.in
tests/examples/overlay/: Makefile.in
tests/examples/playrec/: Makefile.in
tests/examples/seek/: Makefile.in
tests/examples/snapshot/: Makefile.in
tests/examples/v4l/: Makefile.in
tests/examples/volume/: Makefile.in
tests/files/: Makefile.in
tests/icles/: Makefile.in
tests/icles/playback/: Makefile.in
tools/: Makefile.am  Makefile.in
wearable/: configure.ac
wearable/ext/alsa/: gstalsa.c  gstalsasrc.c
wearable/ext/ogg/: gstoggstream.c
wearable/gst-libs/gst/app/: gstappsrc.c
wearable/gst-libs/gst/audio/: gstaudiodecoder.c  gstbaseaudiosink.c  gstringbuffer.c
wearable/gst-libs/gst/interfaces/: cameracontrol.c  cameracontrol.h
wearable/gst-libs/gst/riff/: riff-media.c
wearable/gst/audioconvert/: gstaudioconvert.c
wearable/gst/playback/: gstdecodebin2.c  gstplaysink.c
wearable/gst/subparse/: Makefile.am  gstsubparse.c  gstsubparse.h  samiparse.c  samiparse.h
wearable/gst/typefind/: gsttypefindfunctions.c
wearable/gst/videorate/: gstvideorate.c  gstvideorate.h
wearable/sys/xvimage/: xv_types.h  xvimagesink.c  xvimagesink.h
win32/common/: config.h-new
(+4 files in other folders)
