plugin_LTLIBRARIES = libgstvspfilter.la

libgstvspfilter_la_SOURCES = gstvspfilter.c
libgstvspfilter_la_CFLAGS = \
	$(GST_PLUGINS_BASE_CFLAGS) \
	$(GST_CFLAGS)
libgstvspfilter_la_LIBADD = \
	$(top_builddir)/gst-libs/gst/video/libgstvideo-$(GST_API_VERSION).la \
	$(top_builddir)/gst-libs/gst/allocators/libgstallocators-$(GST_API_VERSION).la \
	$(GST_BASE_LIBS) \
	$(GST_LIBS)
libgstvspfilter_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
libgstvspfilter_la_LIBTOOLFLAGS = $(GST_PLUGIN_LIBTOOLFLAGS)

noinst_HEADERS = gstvspfilter.h

Android.mk: Makefile.am $(BUILT_SOURCES)
	androgenizer \
	-:PROJECT libgstvspfilter -:SHARED libgstvspfilter \
	 -:TAGS eng debug \
         -:REL_TOP $(top_srcdir) -:ABS_TOP $(abs_top_srcdir) \
	 -:SOURCES $(libgstvspfilter_la_SOURCES) \
	           $(nodist_libgstvspfilter_la_SOURCES) \
	 -:CFLAGS $(DEFS) $(DEFAULT_INCLUDES) $(libgstvspfilter_la_CFLAGS) \
	 -:LDFLAGS $(libgstvspfilter_la_LDFLAGS) \
	           $(libgstvspfilter_la_LIBADD) \
	           -ldl \
	 -:PASSTHROUGH LOCAL_ARM_MODE:=arm \
		       LOCAL_MODULE_PATH:='$$(TARGET_OUT)/lib/gstreamer-0.10' \
	> $@
